[gd_scene load_steps=2 format=3 uid="uid://cegikfy1jt504"]

[ext_resource type="Script" path="res://VectorPanel.gd" id="1_cqrfv"]

[node name="VectorPanel" type="Panel"]
custom_minimum_size = Vector2(250, 70)
anchors_preset = -1
anchor_right = 0.217
anchor_bottom = 0.108
offset_right = -13.984
offset_bottom = 0.0159988
script = ExtResource("1_cqrfv")

[node name="nameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_right = 5.0
offset_bottom = 26.0
grow_horizontal = 2
text = "1"

[node name="coordLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.814
anchor_right = 0.5
anchor_bottom = 0.814
offset_left = -30.0
offset_top = -12.98
offset_right = 30.0
offset_bottom = 10.02
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.612
anchor_right = 0.5
anchor_bottom = 0.612
offset_left = -14.0
offset_top = -17.84
offset_right = 16.0
offset_bottom = 13.16
grow_horizontal = 2
grow_vertical = 2
text = "+"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 0
offset_left = 225.0
offset_top = 32.0
offset_right = 244.0
offset_bottom = 63.0
text = "Ð£"

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="DeleteButton" to="." method="_on_delete_button_button_up"]
